	* Bugfix: Area was not set on popup ajax requests
	* Changed: Only focus RTE when loaded over ajax
	* Changed: TodoyuFormElement::getStorageData() is final now and checks always for noStorage and disabled
	* Changed: TodoyuString::html2text text handling improved
	* Changed: Popup calendar dotted border width is now 1px (was 2)
	* Added: TodoyuCountry::getIsoNumCurrency()
	* Added: TodoyuFormElement::getStorageDataInternal() to override storageData properly
	* Added: TodoyuDatabase::quoteTablename() (currently alias of quoteFieldName()). Cleanup quoteFieldName()
	* Added: Support to validate against fields in the parent form
	* Added: TodoyuFormElement methods replaceFieldValidatorWithValue() and removeValidator()
	* Added: Log hook calls
	* Added: Log level LEVEL_CORE which is even deeper than debug and shows internal logs of todoyu core (hooks, connections, etc)
	* Added: Limit parameter for TodoyuDateRange methods
	* Added: Basic getters for TodoyuRole

core 2.1.3 - 2011-11-17
	* Bugfix: System URL was set wrong on windows systems
	* Bugfix: Cropping of tabs didn't work correctly in ie. Due to substr(negativeValue)
	* Bugfix: Checkbox had problem with default value
	* Bugfix: ReplyTo & sender of emails were automatically set to the system mail
	* Bugfix: Simplified textarea auto resize. Works now in all major up-to-date browsers
	* Bugfix: XML entities were encoded inside of dwoo tags which caused parse error in template engine (dwoo)
	* Bugfix: Hiding of notifications of the same type failed when more than 2 dots were in the identifier
	* Added: Auto-focus RTE of first form field (e.g. comment text)
	* Added: Cropping for database relation labels in form
	* Added TodoyuTime::time() to set null values to current time
	* Added TodoyuDateRange
	* Added TodoyuArray::createMap()
	* Added: action dispatcher error output contains now also action controller class name
	* Added: Wrappers for rename() and copy() in TodoyuFileManager